Css cambio Foto

--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -11,7 +11,7 @@
     font-size: 20px;
     font-style: italic;
     font-weight: bold;
-    background-image: url(https://media.istockphoto.com/photos/staff-working-behind-counter-in-busy-coffee-shop-picture-id900816038?k=20&m=900816038&s=612x612&w=0&h=PYTP1QdLaw2YuvrKZVe8nGgek6wa0CmYN4bRqjhYr8E=);
+    background-image: url(https://drive.google.com/file/d/1YRKdaOh2V3jXEyNnyfUMUtCE08SQbu0e/view?usp=sharing);
 }
 .Game input {
     background-color: #d88b79;
