--- a/src/components/App.css
+++ b/src/components/App.css
@@ -11,7 +11,7 @@
   }
 }
 .App-header {
-  background-color: #282c34;
+  background-color: black;
   min-height: 50vh;
   display: flex;
   flex-direction: column;
