--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -11,7 +11,7 @@
     font-size: 20px;
     font-style: italic;
     font-weight: bold;
-    background-image: url(https://drive.google.com/file/d/1YRKdaOh2V3jXEyNnyfUMUtCE08SQbu0e/view?usp=sharing);
+    background-image: url(../images/ctockcafe.jpg);
 }
 .Game input {
     background-color: #d88b79;
