--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -7,7 +7,7 @@
     margin-left: 256px;
     margin-right: 256px;
     align-items: center;
-    color: #eddbcd;
+    color: rgb(185, 37, 27);
     font-size: 20px;
     font-style: italic;
     font-weight: bold;
@@ -43,7 +43,7 @@
     font-size: 30px;
     font-weight: bold;
     margin: 0;
-    color: #eddbcd;
+    color: #fd6e00;
 }
 /* Animación de parpadeo */
 .flickering {
